--- a/base/qbittorrent.yaml
+++ b/base/qbittorrent.yaml
@@ -61,7 +61,7 @@ spec:
           subPath: qbittorrent
       containers:
       - name: qbittorrent
-        image: linuxserver/qbittorrent:14.2.5.99202004250119-7015-2c65b79ubuntu18.04.1-ls93
+        image: linuxserver/qbittorrent:version-14.3.4.99202104180633-7350-2c8f322afubuntu20.04.1
         env:
         - name: TZ
           value: Australia/Perth
