--- a/install_x86_64.yaml
+++ b/install_x86_64.yaml
@@ -62,6 +62,23 @@ kind: Service
 metadata:
   labels:
     app: htpc
+  name: qbittorrent
+  namespace: htpc
+spec:
+  ports:
+  - name: webui
+    port: 8080
+    protocol: TCP
+    targetPort: 8080
+  selector:
+    app: htpc
+    run: qbittorrent
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: htpc
   name: radarr
   namespace: htpc
 spec:
@@ -162,23 +179,57 @@ spec:
       - command:
         - sh
         - -c
-        - "mkdir -p /htpc/bazarr/config\nexport RADARR_API_KEY=$(cat /htpc/radarr/config.xml
-          | sed -ne \"/ApiKey/{s/.*<ApiKey>\\(.*\\)<\\/ApiKey>.*/\\1/p;q;}\")\nexport
-          SONARR_API_KEY=$(cat /htpc/sonarr/config.xml | sed -ne \"/ApiKey/{s/.*<ApiKey>\\(.*\\)<\\/ApiKey>.*/\\1/p;q;}\")\ncat
-          << EOF > /htpc/bazarr/config/config.ini\n[sonarr]\napikey = ${SONARR_API_KEY}\nfull_update
-          = Daily\nip = sonarr\nonly_monitored = False\nbase_url = /sonarr\nssl =
-          False\nport = 8989\n\n[radarr]\napikey = ${RADARR_API_KEY}\nfull_update
-          = Daily\nip = radarr\nonly_monitored = False\nbase_url = /radarr\nssl =
-          False\nport = 7878\n\n[general]\nmovie_default_hi = False\nmovie_default_language
-          = []\nip = 0.0.0.0\nuse_scenename = True\nuse_postprocessing = False\nenabled_providers
-          = subscene,tvsubtitles\nauto_update = True\nport = 6767\nuse_radarr = True\nbase_url
-          = /bazarr/\npage_size = 25\nminimum_score_movie = 70\nbranch = master\nsingle_language
-          = False\nuse_sonarr = True\nserie_default_hi = False\npath_mappings_movie
-          = [['/movies', '/movies'], ['', ''], ['', ''], ['', ''], ['', '']]\nserie_default_enabled
-          = False\nmovie_default_enabled = False\nserie_default_language = []\npath_mappings
-          = [['/tv', '/tv'], ['', ''], ['', ''], ['', ''], ['', '']]\npostprocessing_cmd
-          = \nminimum_score = 90\ndebug = False\nuse_embedded_subs = True\nadaptive_searching
-          = False\nEOF\n"
+        - |
+          mkdir -p /htpc/bazarr/config
+          export RADARR_API_KEY=$(cat /htpc/radarr/config.xml | sed -ne "/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}")
+          export SONARR_API_KEY=$(cat /htpc/sonarr/config.xml | sed -ne "/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}")
+          cat << EOF > /htpc/bazarr/config/config.ini
+          [sonarr]
+          apikey = ${SONARR_API_KEY}
+          full_update = Daily
+          ip = sonarr
+          only_monitored = False
+          base_url = /sonarr
+          ssl = False
+          port = 8989
+
+          [radarr]
+          apikey = ${RADARR_API_KEY}
+          full_update = Daily
+          ip = radarr
+          only_monitored = False
+          base_url = /radarr
+          ssl = False
+          port = 7878
+
+          [general]
+          movie_default_hi = False
+          movie_default_language = []
+          ip = 0.0.0.0
+          use_scenename = True
+          use_postprocessing = False
+          enabled_providers = subscene,tvsubtitles
+          auto_update = True
+          port = 6767
+          use_radarr = True
+          base_url = /bazarr/
+          page_size = 25
+          minimum_score_movie = 70
+          branch = master
+          single_language = False
+          use_sonarr = True
+          serie_default_hi = False
+          path_mappings_movie = [['/movies', '/movies'], ['', ''], ['', ''], ['', ''], ['', '']]
+          serie_default_enabled = False
+          movie_default_enabled = False
+          serie_default_language = []
+          path_mappings = [['/tv', '/tv'], ['', ''], ['', ''], ['', ''], ['', '']]
+          postprocessing_cmd =
+          minimum_score = 90
+          debug = False
+          use_embedded_subs = True
+          adaptive_searching = False
+          EOF
         image: busybox
         name: config
         volumeMounts:
@@ -301,6 +352,98 @@ spec:
         - mountPath: /config
           name: htpc-home
           subPath: jackett
+      securityContext:
+        fsGroup: 1000
+      volumes:
+      - hostPath:
+          path: /opt/htpc
+          type: DirectoryOrCreate
+        name: htpc-home
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: htpc
+    run: qbittorrent
+  name: qbittorrent
+  namespace: htpc
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: htpc
+      run: qbittorrent
+  template:
+    metadata:
+      labels:
+        app: htpc
+        run: qbittorrent
+    spec:
+      containers:
+      - env:
+        - name: TZ
+          value: Australia/Perth
+        - name: PUID
+          value: "1000"
+        - name: PGID
+          value: "1000"
+        image: linuxserver/qbittorrent:version-14.3.4.99202104180633-7350-2c8f322afubuntu20.04.1
+        name: qbittorrent
+        ports:
+        - containerPort: 8080
+          name: webui
+          protocol: TCP
+        - containerPort: 6881
+          name: torrent-tcp
+          protocol: TCP
+        - containerPort: 6881
+          name: torrent-udp
+          protocol: UDP
+        resources: {}
+        volumeMounts:
+        - mountPath: /config
+          name: htpc-home
+          subPath: qbittorrent
+        - mountPath: /downloads
+          name: htpc-home
+          subPath: downloads
+        - mountPath: /watch
+          name: htpc-home
+          subPath: watch
+      initContainers:
+      - command:
+        - sh
+        - -c
+        - chown -R 1000:1000 /config
+        image: busybox
+        name: chown
+        volumeMounts:
+        - mountPath: /config
+          name: htpc-home
+          subPath: qbittorrent
+        - mountPath: /downloads
+          name: htpc-home
+          subPath: downloads
+        - mountPath: /watch
+          name: htpc-home
+          subPath: watch
+      - args:
+        - 'echo starting; echo ''{"download-dir": "/downloads", "rpc-whitelist-enabled":
+          false, "rpc-host-whitelist-enabled": false}'' > /config/settings.json; echo
+          done;'
+        command:
+        - sh
+        - -c
+        image: busybox
+        name: setup-qbittorrent
+        securityContext:
+          runAsGroup: 1000
+          runAsUser: 1000
+        volumeMounts:
+        - mountPath: /config
+          name: htpc-home
+          subPath: qbittorrent
       securityContext:
         fsGroup: 1000
       volumes:
@@ -632,3 +775,22 @@ spec:
           serviceName: transmission
           servicePort: webui
         path: /transmission
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  annotations:
+    traefik.frontend.rule.type: PathPrefixStrip
+    traefik.ingress.kubernetes.io/frontend-entry-points: http
+  labels:
+    app: htpc
+  name: qbittorrent
+  namespace: htpc
+spec:
+  rules:
+  - http:
+      paths:
+      - backend:
+          serviceName: qbittorrent
+          servicePort: webui
+        path: /qbittorrent
